--- a/GUIs/mainLayout.ui
+++ b/GUIs/mainLayout.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>w7xPyViewer</class>
+ <widget class="QMainWindow" name="w7xPyViewer">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>w7xPyViewer</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="enabled">
