--- a/GUIs/spectrogramSettingsLayout.ui
+++ b/GUIs/spectrogramSettingsLayout.ui
@@ -6,26 +6,26 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>263</width>
-    <height>200</height>
+    <width>561</width>
+    <height>143</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+   <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>263</width>
-    <height>200</height>
+    <width>561</width>
+    <height>143</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>263</width>
-    <height>200</height>
+    <width>561</width>
+    <height>143</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -34,63 +34,14 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>10</y>
-     <width>261</width>
-     <height>181</height>
+     <x>9</x>
+     <y>12</y>
+     <width>549</width>
+     <height>119</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="label">
-      <property name="minimumSize">
-       <size>
-        <width>50</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>20</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>nfft</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="nfft_ui">
-      <property name="minimumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>8</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>256</string>
-      </property>
-      <property name="placeholderText">
-       <string extracomment="timeScale"/>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="2">
+    <item row="0" column="0" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_2">
       <property name="minimumSize">
        <size>
@@ -112,7 +63,7 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="3">
+    <item row="0" column="1">
      <widget class="QLineEdit" name="fs_kHz_ui">
       <property name="minimumSize">
        <size>
@@ -139,7 +90,154 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
+    <item row="0" column="2">
+     <widget class="QLabel" name="label">
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>20</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>nfft</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="3">
+     <widget class="QLineEdit" name="nfft_ui">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>256</string>
+      </property>
+      <property name="placeholderText">
+       <string extracomment="timeScale"/>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="4">
+     <widget class="QLabel" name="label_4">
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>20</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>nperseg</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="5">
+     <widget class="QLineEdit" name="nperseg_ui">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>256</string>
+      </property>
+      <property name="placeholderText">
+       <string extracomment="timeScale"/>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="6">
+     <widget class="QLabel" name="label_5">
+      <property name="minimumSize">
+       <size>
+        <width>55</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>55</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>noverlap</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="7">
+     <widget class="QLineEdit" name="noverlap_ui">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>32</string>
+      </property>
+      <property name="placeholderText">
+       <string extracomment="timeScale"/>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_3">
       <property name="minimumSize">
        <size>
@@ -189,104 +287,6 @@
      </widget>
     </item>
     <item row="1" column="2">
-     <widget class="QLabel" name="label_4">
-      <property name="minimumSize">
-       <size>
-        <width>50</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>20</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>nperseg</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="3">
-     <widget class="QLineEdit" name="nperseg_ui">
-      <property name="minimumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>8</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>256</string>
-      </property>
-      <property name="placeholderText">
-       <string extracomment="timeScale"/>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_5">
-      <property name="minimumSize">
-       <size>
-        <width>55</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>55</width>
-        <height>15</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>noverlap</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QLineEdit" name="noverlap_ui">
-      <property name="minimumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>8</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>32</string>
-      </property>
-      <property name="placeholderText">
-       <string extracomment="timeScale"/>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="2">
      <widget class="QLabel" name="label_6">
       <property name="minimumSize">
        <size>
@@ -308,7 +308,7 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="3">
+    <item row="1" column="3">
      <widget class="QLineEdit" name="detrend_ui">
       <property name="minimumSize">
        <size>
@@ -335,7 +335,7 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
+    <item row="1" column="4">
      <widget class="QLabel" name="label_7">
       <property name="minimumSize">
        <size>
@@ -357,7 +357,7 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
+    <item row="1" column="5">
      <widget class="QLineEdit" name="scaling_ui">
       <property name="minimumSize">
        <size>
@@ -384,7 +384,7 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="2">
+    <item row="1" column="6" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_8">
       <property name="minimumSize">
        <size>
@@ -406,7 +406,7 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="3">
+    <item row="1" column="7">
      <widget class="QLineEdit" name="mode_ui">
       <property name="minimumSize">
        <size>
@@ -433,7 +433,136 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
+    <item row="2" column="0" colspan="8">
+     <widget class="Line" name="line">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QCheckBox" name="applyBandPass_ui">
+      <property name="layoutDirection">
+       <enum>Qt::RightToLeft</enum>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="tristate">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="2" alignment="Qt::AlignRight">
+     <widget class="QLabel" name="label_10">
+      <property name="text">
+       <string>lowcut</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="3">
+     <widget class="QLineEdit" name="bandpassLowcut_kHz_ui">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>5000</string>
+      </property>
+      <property name="placeholderText">
+       <string extracomment="timeScale"/>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="4" alignment="Qt::AlignRight">
+     <widget class="QLabel" name="label_11">
+      <property name="text">
+       <string>highcut</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="5">
+     <widget class="QLineEdit" name="bandpassHighcut_kHz_ui">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>15000</string>
+      </property>
+      <property name="placeholderText">
+       <string extracomment="timeScale"/>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="6" alignment="Qt::AlignRight">
+     <widget class="QLabel" name="label_12">
+      <property name="text">
+       <string>order</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="7">
+     <widget class="QLineEdit" name="order_ui">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>3</string>
+      </property>
+      <property name="placeholderText">
+       <string extracomment="timeScale"/>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0" colspan="8">
+     <widget class="Line" name="line_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_9">
       <property name="minimumSize">
        <size>
@@ -455,8 +584,8 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
-     <widget class="QComboBox" name="scaleLinLogSqrt">
+    <item row="5" column="1">
+     <widget class="QComboBox" name="scaleLinLogSqrt_ui">
       <property name="minimumSize">
        <size>
         <width>60</width>
@@ -486,8 +615,8 @@
       </item>
      </widget>
     </item>
-    <item row="5" column="3">
-     <widget class="QPushButton" name="resetSetings_btn">
+    <item row="5" column="5">
+     <widget class="QPushButton" name="setToUiAndClose_btn">
       <property name="minimumSize">
        <size>
         <width>50</width>
@@ -501,11 +630,11 @@
        </size>
       </property>
       <property name="text">
-       <string>reset</string>
+       <string>ok</string>
       </property>
      </widget>
     </item>
-    <item row="5" column="2">
+    <item row="5" column="6">
      <widget class="QPushButton" name="saveSettings_btn">
       <property name="minimumSize">
        <size>
@@ -524,8 +653,8 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
-     <widget class="QPushButton" name="setToUiAndClose_btn">
+    <item row="5" column="7">
+     <widget class="QPushButton" name="resetSetings_btn">
       <property name="minimumSize">
        <size>
         <width>50</width>
@@ -539,7 +668,14 @@
        </size>
       </property>
       <property name="text">
-       <string>ok</string>
+       <string>reset</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0" alignment="Qt::AlignRight">
+     <widget class="QLabel" name="label_13">
+      <property name="text">
+       <string>apply bandPass</string>
       </property>
      </widget>
     </item>
