--- a/GUIs/spectrogramLayout.ui
+++ b/GUIs/spectrogramLayout.ui
@@ -37,7 +37,7 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QFormLayout" name="formLayout">
+     <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
        <widget class="QPushButton" name="redrawSpectrogramBtn">
         <property name="minimumSize">
@@ -82,22 +82,29 @@
         </property>
        </widget>
       </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_spectr">
-      <item>
-       <widget class="GraphicsLayoutWidget" name="spectrogram_UI">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="baseSize">
-         <size>
-          <width>0</width>
-          <height>0</height>
-         </size>
+      <item row="0" column="2">
+       <widget class="QLabel" name="mouseXY_UI">
+        <property name="text">
+         <string>mouse X, Y</string>
         </property>
        </widget>
+      </item>
+      <item row="1" column="0" colspan="3">
+       <layout class="QHBoxLayout" name="horizontalLayout_spectr">
+        <item>
+         <widget class="GraphicsLayoutWidget" name="spectrogram_UI">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <property name="baseSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </item>
